// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a scale viewer component 1`] = `
<div
  data-testid="base"
>
  <div
    class="scale-viewer css-0"
    data-theme="light"
  >
    <p
      class="chakra-text css-0"
      data-theme="light"
    >
      1:
      279,540,573
    </p>
  </div>
</div>
`;

exports[`should successfully create a scale viewer component with additional css classes and box properties 1`] = `
<div
  data-testid="base"
>
  <div
    class="scale-viewer test test1 test2 css-sz63p1"
    data-theme="light"
  >
    <p
      class="chakra-text css-0"
      data-theme="light"
    >
      1:
      279,540,573
    </p>
  </div>
</div>
`;
